styles/base.css
body {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    margin: 0;
}

#course-title {
    display: block;
    text-align: center;
    padding: 20px;
    background-color: #57c81f;
    color: #0f2b7c;
}

nav {
    background-color: #0f2b7c;
}

nav ul {
    display: flex;
    list-style-type: none;
    align-items: center;
    margin: 0 auto;
}

nav ul li {
    flex: 1 1 100%;
}

nav a {
    display: block;
    color: #fff;
    text-decoration: none;
    text-align: center;
    padding: 1rem;
}

nav a:hover {
    color: #57c81f;
    text-decoration: underline;
}

header {
    display: block;
}

h1 {
    grid-column: 1 / 3;
    padding: 1rem;
    color: #0f2b7c;
    font-size: 2rem;
    text-align: center;
    margin: 0;
}

main {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 25px; 
    padding: 20px;
    max-width: 1200px;
    margin: 0 auto;
}
.card {
    border: 1px solid #d0d0d0;
    border-radius: 5px;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);

}

.card h2 {
    text-align: center;
    background-color: #0f2b7c;
    margin: 0;
    color: #fff;
    padding: 5px;
    border-radius: 5px 5px 0px 0px;

}

.card img {
    width: 130px;
    height: auto;
    display: block;
}
.card p {
    padding: 15px;
}

.victor {
    float: right;
    padding: 15px;
}

figcaption{
    font-style: italic;
    margin-top: 5px;
}

section.card figure {
    float: left;
    margin: 0;
    width: 150px;
    padding: 15px;
    text-align: center;
}

section.card figure img {
    width: 100%;
    height: auto;
}

.card h3 {
    text-align: center;
    border-bottom: 1px solid #d0d0d0;
    margin: 20px 40px;
    padding-bottom: 10px;
    font-size: 1.2rem;
    clear: both;
}

.bandera_text{
    margin: 0;
    width: 80%;
}

footer {
    margin-top: 20px;
    padding: 20px;
    background-color: #0f2b7c;
    color: white;
    text-align: center;
    border-top: 5px solid #57c81f;
}

footer p {
    margin: 5px 0;
}

#lastModified {
    color: #57c81f;
    font-weight: bold;
}

.card:last-of-type {
    display: flex;
    flex-direction: column;
}

.card:last-of-type ul {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0;
    padding-left: 60px;
    list-style-position: inside;
}

.card:last-of-type ul li {
    margin-bottom: 10px;
}

